--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Infinite 🍑 & 🐈</h1>
-    <div class="loader" id="id">
+    <p>
+      Made by
+      <a href="https://r1oga.now.sh/" target="_blank">@r1oga</a> |
+      <a target="_blank" href="https://github.com/r1oga/infinite-scroll">
+        <i class="fab fa-github"></i>
+      </a>
+    </p>
+    <h1><i class="fas fa-infinity"></i> 🍑 & <i class="fas fa-cat"></i></h1>
+    <div class="loader" id="loader">
       <img src="loader.svg" alt="loading" />
     </div>
     <div class="image-container" id="image-container"></div>
