feat: Scroll within image container. Bottom footer

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <p>
-      Made by
-      <a href="https://r1oga.now.sh/" target="_blank">@r1oga</a> |
-      <a target="_blank" href="https://github.com/r1oga/infinite-scroll">
-        <i class="fab fa-github"></i>
-      </a>
-    </p>
     <h1><i class="fas fa-infinity"></i> 🍑 & <i class="fas fa-cat"></i></h1>
     <div class="loader" id="loader">
       <img src="loader.svg" alt="loading" />
     </div>
     <div class="image-container" id="image-container"></div>
+    <footer>
+      Made by
+      <a href="https://r1oga.now.sh/" target="_blank">@r1oga</a> |
+      <a target="_blank" href="https://github.com/r1oga/infinite-scroll">
+        <i class="fab fa-github"></i>
+      </a>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
